# kube_meetup

./: .gitignore  .pre-commit-config.yaml  README.md  helmfile.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  cronjob.py  worker.py
charts/demo-app/: .gitignore  Chart.yaml  values.yaml
charts/demo-app/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  cronjob.yaml  ingress.yaml  namespace.yaml  secret.yaml  servicemonitor.yaml  worker-deployment.yaml
docker/: Dockerfile
tests/: conftest.py  test_api.py
