[project]
name = "kube-demo"
version = "0.1.0"
description = "Kubernetes demo application for meetup"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "redis>=5.0.0",
    "gunicorn>=21.0.0",
    "prometheus-client>=0.19.0",
    "cryptography>=46.0.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.0",
    "ruff>=0.15.0",
    "types-redis>=4.6.0.20241004",
    "pytest>=8.0.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
